<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a00816766.swags.GraphActivity">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxAngle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/finish"
        android:onClick="openMain"
        android:text="@string/finish"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp" />

    <Button
        android:id="@+id/sessionButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/session"
        android:onClick="openSession"
        android:text="@string/session"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/finishButton"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp" />

    <CheckBox
        android:id="@+id/checkBoxAngle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/angle"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxSpeed"
        app:layout_constraintLeft_toLeftOf="@+id/checkBoxCurrent"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/checkBoxSpeed"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/speed"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxDistance"
        app:layout_constraintLeft_toLeftOf="@+id/checkBoxCurrent"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/checkBoxDistance"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/distance"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxCurrent"
        app:layout_constraintLeft_toLeftOf="@+id/checkBoxCurrent"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/checkBoxCurrent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/current"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxLive"
        app:layout_constraintLeft_toLeftOf="@+id/checkBoxLive"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/checkBoxLive"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/live"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/finishButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onCheckboxClicked" />


</android.support.constraint.ConstraintLayout>
